Versão funcional do analisador sintático